--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin-one-vue-tailwind",
+  "name": "churrys-waffles-app",
   "version": "2.1.0",
   "scripts": {
     "dev": "vite --host",
