--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@chenfengyuan/vue-number-input": "^2.0.0",
     "@mdi/js": "^6.4.95",
+    "@vuelidate/core": "^2.0.0-alpha.34",
+    "@vuelidate/validators": "^2.0.0-alpha.26",
     "axios": "^0.24.0",
     "chart.js": "^3.6.0",
     "core-js": "^3.6.5",
