--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@mdi/js": "^6.4.95",
     "@vuelidate/core": "^2.0.0-alpha.34",
     "@vuelidate/validators": "^2.0.0-alpha.26",
-    "axios": "^0.24.0",
     "chart.js": "^3.6.0",
     "core-js": "^3.6.5",
     "firebase": "^9.6.6",
+    "luxon": "^2.3.0",
     "numeral": "^2.0.6",
     "vue": "^3.2.31",
     "vue-router": "^4.0.0-0",
