--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^3.6.0",
     "core-js": "^3.6.5",
     "firebase": "^9.6.6",
+    "lodash": "^4.17.21",
     "luxon": "^2.3.0",
     "numeral": "^2.0.6",
     "vue": "^3.2.31",
